refactor and add endpoints
